syntax = "proto3";

import "Protos/Common/common.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Post.API";

package post;

service PostCRUD {

  rpc CreatePost (CreatePostRequest) returns (common.Response); //tested
  rpc UpdatePost (UpdatePostRequest) returns (common.Response); //tested
  rpc DeletePost (common.Request) returns (common.Response); //tested
  rpc GetPostById (common.Request) returns (PostInfoResponse); //tested

}

message CreatePostRequest {
  google.protobuf.StringValue title = 1;
  google.protobuf.StringValue description = 2;
  google.protobuf.Int64Value ownerId = 3;
  google.protobuf.Int64Value categoryId = 4;
  google.protobuf.StringValue address = 5;
  google.protobuf.StringValue referencePoint = 6;
  google.protobuf.StringValue contactNumber = 7;
  google.protobuf.Int32Value roomsNo = 8;
  google.protobuf.Int32Value bathroomsNo = 9;
  google.protobuf.Int32Value bedsNo = 10;
  google.protobuf.Int32Value maxGuestsNo = 11;
  google.protobuf.Int32Value squareMeters = 12;
  google.protobuf.DoubleValue price = 13;
  google.protobuf.DoubleValue latitude = 14;
  google.protobuf.DoubleValue longitude = 15;
  google.protobuf.BoolValue isWholeApartment = 16;
  google.protobuf.Timestamp movingInTimeStamp = 17;
  google.protobuf.Timestamp movingOutTimeStamp = 18;
  google.protobuf.StringValue additionalInfo = 19;
}


message UpdatePostRequest {
int64 id = 1;
  google.protobuf.StringValue title = 2;
  google.protobuf.StringValue description = 3;
  google.protobuf.Int64Value ownerId = 4;
  google.protobuf.Int64Value categoryId = 5;
  google.protobuf.StringValue address = 6;
  google.protobuf.StringValue referencePoint = 7;
  google.protobuf.StringValue contactNumber = 8;
  google.protobuf.Int32Value roomsNo = 9;
  google.protobuf.Int32Value bathroomsNo = 10;
  google.protobuf.Int32Value bedsNo = 11;
  google.protobuf.Int32Value maxGuestsNo = 12;
  google.protobuf.Int32Value squareMeters = 13;
  google.protobuf.DoubleValue price = 14;
  google.protobuf.DoubleValue latitude = 15;
  google.protobuf.DoubleValue longitude = 16;
  google.protobuf.BoolValue isWholeApartment = 17;
  google.protobuf.Timestamp movingInTimeStamp = 18;
  google.protobuf.Timestamp movingOutTimeStamp = 19;
  google.protobuf.StringValue additionalInfo = 20;
}

message AccommodationItem {
int64 id = 1;
google.protobuf.StringValue otherValue = 3;
common.Item base = 4;
}



message PostInfoResponse {
   int64 id = 1;
   string title = 2;
   google.protobuf.StringValue description = 3;
   User owner = 4;
   Category category = 5;
   string address = 6;
   google.protobuf.StringValue referencePoint = 7;
   string contactNumber = 8;
   google.protobuf.Int32Value roomsNo = 9;
   google.protobuf.Int32Value bathroomsNo = 10;
   google.protobuf.Int32Value bedsNo = 11;
   int32 maxGuestsNo = 12;
   google.protobuf.Int32Value squareMeters = 13;
   double price = 14;
   google.protobuf.DoubleValue latitude = 15;
   google.protobuf.DoubleValue longitude = 16;
   google.protobuf.BoolValue isWholeApartment = 17;
   google.protobuf.StringValue additionalInfo = 18;
   google.protobuf.Timestamp datePublishedTimeStamp = 19;
   string movingInTime = 20;
   string movingOutTime = 21;
   repeated AccommodationPhoto accommodationPhotos = 22;
   repeated AccommodationItem accommodationSpecificities = 23;
   repeated AccommodationItem accommodationRules = 24;
   repeated AccommodationItem accommodationFacilities = 25;
   bool NoItem = 26;
}

message User {
int64 id = 1;
google.protobuf.StringValue firstName = 2;
google.protobuf.StringValue lastName = 3;
string email = 9;
google.protobuf.StringValue phoneNumber = 10;
}

message Category {
int64 id = 1;
string name = 2;
}

message AccommodationPhoto {
int64 id = 1;
google.protobuf.BytesValue photo = 3;
google.protobuf.StringValue mimeType = 4;
}




